# WInc3d

./: CMakeLists.txt  README.md
cmake/Modules/: SetParallelizationLibrary.cmake
src/: CMakeLists.txt  WInc3D.f90
